swagger get history
